crates/ignis_lir/tests/snapshots/golden_lir__lir_if_without_else.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn clamp_positive(x: i32): i32 {
  locals:
    %0: i32 = x
    %1: i32 = result [mut]

  entry_0:
    store %0, t0
    t1 = load %0 : i32
    store %1, t1
    t2 = load %0 : i32
    t3 = LessThan t2, 0 : bool
    br t3, then_1, else_2

  then_1:
    store %1, 0
    goto merge_3

  else_2:
    goto merge_3

  merge_3:
    t4 = load %1 : i32
    ret t4
}
