crates/ignis_lir/tests/snapshots/golden_lir__lir_infinite_loop_with_break.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn find_limit(): i32 {
  locals:
    %0: i32 = i [mut]

  entry_0:
    store %0, 0
    goto loop_header_2

  loop_exit_1:
    t4 = load %0 : i32
    ret t4

  loop_header_2:
    br true, loop_body_3, loop_exit_1

  loop_body_3:
    t0 = load %0 : i32
    t1 = GreaterThan t0, 10 : bool
    br t1, then_5, else_6

  loop_continue_4:
    goto loop_header_2

  then_5:
    goto loop_exit_1

  else_6:
    goto merge_7

  merge_7:
    t2 = load %0 : i32
    t3 = Add t2, 1 : i32
    store %0, t3
    goto loop_continue_4
}
