crates/ignis_lir/tests/snapshots/golden_lir__lir_logical_and.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn both(a: error, b: error): error {
  locals:
    %0: error = a
    %1: error = b
    %2: bool = _ [mut]

  entry_0:
    store %0, t0
    store %1, t1
    t2 = load %0 : error
    store %2, t2
    br t2, sc_right_1, sc_merge_2

  sc_right_1:
    t3 = load %1 : error
    store %2, t3
    goto sc_merge_2

  sc_merge_2:
    t4 = load %2 : bool
    ret t4
}
