crates/ignis_lir/tests/snapshots/golden_lir__lir_loop_with_continue.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn sum_odds(n: i32): i32 {
  locals:
    %0: i32 = n
    %1: i32 = sum [mut]
    %2: i32 = i [mut]

  entry_0:
    store %0, t0
    store %1, 0
    store %2, 0
    goto loop_header_2

  loop_exit_1:
    t12 = load %1 : i32
    ret t12

  loop_header_2:
    t1 = load %2 : i32
    t2 = load %0 : i32
    t3 = LessThan t1, t2 : bool
    br t3, loop_body_3, loop_exit_1

  loop_body_3:
    t4 = load %2 : i32
    t5 = Add t4, 1 : i32
    store %2, t5
    t6 = load %2 : i32
    t7 = Mod t6, 2 : i32
    t8 = Equal t7, 0 : bool
    br t8, then_5, else_6

  loop_continue_4:
    goto loop_header_2

  then_5:
    goto loop_continue_4

  else_6:
    goto merge_7

  merge_7:
    t9 = load %1 : i32
    t10 = load %2 : i32
    t11 = Add t9, t10 : i32
    store %1, t11
    goto loop_continue_4
}
