crates/ignis_lir/tests/snapshots/golden_lir__lir_mutable_variables.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn count(): i32 {
  locals:
    %0: i32 = x [mut]

  entry_0:
    store %0, 0
    t0 = load %0 : i32
    t1 = Add t0, 1 : i32
    store %0, t1
    t2 = load %0 : i32
    t3 = Add t2, 1 : i32
    store %0, t3
    t4 = load %0 : i32
    ret t4
}
