crates/ignis_lir/tests/snapshots/golden_lir__lir_nested_blocks.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn nested(): i32 {
  locals:
    %0: i32 = x
    %1: i32 = y
    %2: i32 = z

  entry_0:
    store %0, 1
    store %1, 2
    t0 = load %0 : i32
    t1 = load %1 : i32
    t2 = Add t0, t1 : i32
    store %2, t2
    t3 = load %2 : i32
    ret t3
}
