crates/ignis_lir/tests/snapshots/golden_lir__lir_no_drop_if_returned.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn drop(self: &mut record#0): void {
  locals:
    %0: &mut record#0 = self [mut]

  entry_0:
    store %0, t0
    ret void
}

fn return_owned(): record#0 {
  locals:
    %0: record#0 = s

  entry_0:
    t0 = &mut %0 : *mut record#0
    init_record t0, { 0: 1 } : record#0
    t1 = load %0 : record#0
    ret t1
}
