crates/ignis_lir/tests/snapshots/golden_lir__lir_simple_arithmetic.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn add(a: i32, b: i32): i32 {
  locals:
    %0: i32 = a
    %1: i32 = b

  entry_0:
    store %0, t0
    store %1, t1
    t2 = load %0 : i32
    t3 = load %1 : i32
    t4 = Add t2, t3 : i32
    ret t4
}
