crates/ignis_lir/tests/snapshots/golden_lir__lir_type_cast.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn convert(x: i32): f64 {
  locals:
    %0: i32 = x
    %1: i64 = y

  entry_0:
    store %0, t0
    t1 = load %0 : i32
    t2 = cast t1 as i64
    store %1, t2
    t3 = load %1 : i64
    t4 = cast t3 as f64
    ret t4
}
