crates/ignis_lir/tests/snapshots/golden_lir__lir_unary_operators.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn negate(x: i32): i32 {
  locals:
    %0: i32 = x

  entry_0:
    store %0, t0
    t1 = load %0 : i32
    t2 = Neg t1 : i32
    ret t2
}

fn invert(b: error): error {
  locals:
    %0: error = b

  entry_0:
    store %0, t0
    t1 = load %0 : error
    t2 = Not t1 : bool
    ret t2
}
